Update response message
